--- a/Styles.css
+++ b/Styles.css
@@ -7,6 +7,7 @@ body {
     padding: 20px;
     text-align: center;
 }
+
 nav {
     /*navigation color*/
     background-color: #5c5c5c;
@@ -16,22 +17,17 @@ nav {
     /*creates a line (color = black)*/
     border-bottom: 1.5px solid #000000;
 }
-nav a {
-    /*navigation stuff*/
-    color: #96d35f;
-    padding: 10px 15px;
-    text-decoration: none;
-    font-weight: 300;
-    display: inline-block;
-}
+
 p {
     /*text color*/
     color: #96d35f;
 }    
-a {
+
+p a {
     /*link color*/
     color: #96d35f;
 }    
+
 footer {
     /*Footer color*/
     background-color: #474747;
@@ -42,7 +38,33 @@ footer {
     /*creates a line (color = black)*/
     border-top: 1px solid #000000;
 }
-img {
+
+p img {
     /*image border*/
     border: 4px solid #3d3c4c;
+}
+
+a img {
+    /*sets image to default size*/
+    max-width: 100%;
+    max-height: 100%; 
+}
+
+.github {
+    /*github logo width and height*/
+    height: 50px;
+    width: 50px;
+    position: relative;
+    position: relative;
+    margin: auto;
+    padding: 10px;
+}  
+
+.youtube {
+    /*youtube logo width and height*/ 
+    height: 75px;
+    width: 75px;
+    position: relative;
+    margin: auto;
+    padding: 10px;
 }
