--- a/Styles.css
+++ b/Styles.css
@@ -1,70 +1,54 @@
 body {
-    /*text*/
-    font-family: 'Helvetica Neue, Arial, sans-serif';
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     line-height: 1.6;
-    background-color: #5c5c5c;
-    color: #99999999;
-    padding: 20px;
+    background-image: linear-gradient(hsl(231, 49%, 26%), hsl(181, 100%, 50%));
+    background-attachment: fixed;
+    color: hsl(210, 9%, 22%);
+    padding: 10%;
     text-align: center;
 }
 
 nav {
-    /*navigation color*/
-    background-color: #5c5c5c;
-    color: #c2c2c2;
+    color: hsl(0, 0%, 76%);
     padding: 10px;
     text-align: center;
-    /*creates a line (color = black)*/
-    border-bottom: 1.5px solid #000000;
+    border-bottom: 1.5px solid hsl(0, 0%, 0%);
 }
 
 p {
-    /*text color*/
-    color: #96d35f;
+    color: hsl(210, 9%, 22%);
 }    
 
 p a {
-    /*link color*/
-    color: #96d35f;
+    color: hsl(210, 9%, 22%);
 }    
 
-footer {
-    /*Footer color*/
-    background-color: #474747;
-    color: #b51a00;
-    text-align: center;
-    padding: 10px;
-    margin-top: 20px;
-    /*creates a line (color = black)*/
-    border-top: 1px solid #000000;
-}
-
 .code p img {
-    /*image border*/
-    border: 4px solid #3d3c4c;
+    border: 4px solid hsl(244, 12%, 27%);
+    border-radius: 20px;
 }
 
 a img {
-    /*sets image to default size*/
     max-width: 100%;
     max-height: 100%; 
 }
 
 .github {
-    /*github logo width and height*/
     height: 50px;
     width: 50px;
-    position: relative;
     position: relative;
     margin: auto;
     padding: 10px;
 }  
 
 .youtube {
-    /*youtube logo width and height*/ 
     height: 75px;
     width: 75px;
     position: relative;
     margin: auto;
     padding: 10px;
+}
+
+.line {
+    border-bottom: 1.5px solid hsl(0, 0%, 0%);
 }
