--- a/Styles.css
+++ b/Styles.css
@@ -1,8 +1,6 @@
 body {
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     line-height: 1.6;
-    background-image: linear-gradient(hsl(231, 49%, 26%), hsl(181, 100%, 50%));
-    background-attachment: fixed;
     color: hsl(210, 9%, 22%);
     padding: 10%;
     text-align: center;
@@ -21,16 +19,34 @@ p {
 
 p a {
     color: hsl(210, 9%, 22%);
-}    
-
-.code p img {
-    border: 4px solid hsl(244, 12%, 27%);
-    border-radius: 20px;
-}
+}  
 
 a img {
     max-width: 100%;
     max-height: 100%; 
+}
+
+ul li {
+    text-align: center;
+    display: inline;
+}
+
+ul li a {
+    color: black;
+}
+
+ul li a:hover {
+    color: #474747;
+}
+
+ul li a:hover:before {
+    content: ">  ";
+}
+
+/*classes*/
+.code p img {
+    border: 4px solid hsl(244, 12%, 27%);
+    border-radius: 20px;
 }
 
 .github {
